[feature] added join waitlist form handler

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,3 @@
-# Environment Variables Example
-# Copy this file to .env and fill in your values
-
-# Site Configuration
-# PUBLIC_SITE_URL=https://yourdomain.com
-
-# API Keys (if needed)
-# PUBLIC_API_KEY=your_api_key_here
-
-# Analytics (if needed)
-# PUBLIC_ANALYTICS_ID=your_analytics_id
+# GOOGLE_SHEET_ID=
+# GOOGLE_SERVICE_ACCOUNT_EMAIL=
+# GOOGLE_PRIVATE_KEY=
