--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@astrojs/cloudflare": "^12.6.12",
     "astro": "^5.17.1",
     "google-auth-library": "^10.5.0",
-    "google-spreadsheet": "^5.0.2"
+    "google-spreadsheet": "^5.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.3",
+    "@types/node": "^25.2.3",
     "oxlint": "^1.43.0",
     "prettier": "^3.8.1",
     "prettier-plugin-astro": "^0.14.1",
